<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.siriusdev.passwordkeeper.PasswordKeeper">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:hint="@string/hintAddSystem"
            android:id="@+id/systemAdd"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:inputType="textPersonName" />

        <EditText
            android:hint="@string/hintAddLogin"
            android:id="@+id/loginAdd"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:inputType="textPersonName"
            android:layout_below="@+id/systemAdd" />

        <EditText
            android:hint="@string/hintAddPassword"
            android:id="@+id/passwordAdd"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:inputType="textPassword"
            android:layout_below="@+id/loginAdd" />

        <Button
            android:text="@string/AddButton"
            android:id="@+id/AddButton"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/passwordAdd"
            android:layout_centerHorizontal="true" />

        <Button
            android:text="@string/showAllPasswords"
            android:id="@+id/viewPass"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_below="@+id/AddButton"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
